# mcp-router

./: .gitignore  README.md  config.py  discovery_service.py  mcp_router.py  pyproject.toml
